cmake_minimum_required(VERSION 3.25)

project(
	blake3aes256gcm
	VERSION 0.0.1
	LANGUAGES C
)

if (NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
if(CMAKE_EXPORT_COMPILE_COMMANDS)
	set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES
		${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
endif()

set(DEPS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps" CACHE STRING "" FORCE)

add_subdirectory(src)
